Fix scaling type jump bug

--- a/css/app.css
+++ b/css/app.css
@@ -81,7 +81,7 @@ body {
 .name {
     width: 20%;
     display: inline-block;
-    transform: scale(5);
+    transform: scale(5) translateZ(0);
     transform-origin: 0 0;
 }
 
